src/objects/SBQQ__ProductOption__c.object
<CustomObject>
    <fields>
        <fullName>ConfiguredSKUExternalId__c</fullName>
        <formula>SBQQ__ConfiguredSKU__r.cpqma_ExternalId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConfiguredSKUExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpqma_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>CPQ External Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FeatureExternalId__c</fullName>
        <formula>SBQQ__Feature__r.cpqma_ExternalId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FeatureExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OptionalSKUExternalId__c</fullName>
        <formula>SBQQ__OptionalSKU__r.cpqma_ExternalId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OptionalSKUExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalProductOptionExternalId__c</fullName>
        <formula>ExternalId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RenewalProductOptionExternalId</label>
        <type>Text</type>
    </fields>
</CustomObject>